--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,14 +1,10 @@
-#title {
-    height: 3em;
-    width: 30em;
-    background-color: #282c34;
-}
-
-#photo {
-    height: 3em;
-    width: 10em;
-    background-color: red;
-}
-
 .flex-container {
-    display: flex; }
+    display: flex;
+    flex-direction: row;
+    flex-wrap : wrap;
+    justify-content : center;
+}
+
+.item {
+    margin-left : 5em;
+}
