--- a/src/Header/Photo.css
+++ b/src/Header/Photo.css
@@ -1,20 +1,9 @@
 #photo {
-    height: 15em;
+    height : 15em;
     width: 15em;
-    background-color: red;
+    background: red;
 }
 
 #photo:hover {
-    /*ox-shadow: 60px -16px teal*/
-    /* box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-     transition: box-shadow 0.3s ease-in-out;*/
-
-    background: green;
-    transform: translate(1em,-1em);
-
-    transition-property: transform;
-    transition-duration: 0.5s;
-    transition-delai: 0.1s;
-    transition-timing-function: ease;
-
+    box-shadow: 10px -10px 5px grey;
 }
