--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,50 @@
 body {
+  background: black !important;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
 }
+
+#root {
+  /* background-image: url()*/
+  color: white;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-.tile:hover {
-  background: green;
-  transform: translate(1em,-1em);
-
-  transition-property: transform;
+.animated
+{
+  transition-property: all;
   transition-duration: 0.5s;
   transition-delai: 0.1s;
   transition-timing-function: ease;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap : wrap;
+  justify-content : center;
+}
+
+.item {
+  margin-left : 5em;
+  align-self : center;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap : wrap;
+  justify-content : center;
 }
