--- a/src/Separator/Separator.css
+++ b/src/Separator/Separator.css
@@ -1,17 +1,18 @@
 .separator {
-    margin-left : 1rem;
+    width : 92%;
+    margin-left : 4%;
     margin-top: 5rem;
     margin-bottom: 5rem;
     display: flex;
     flex-direction: row;
-    color: orange;
+    color: rgb(255,140,0,0.6);
 }
 
 .line{
     margin-left: 0.5em;
-    width : 90%;
-    height: 0.1em;
-    background : orange;
+    width : 100%;
+    height: 1px;
+    background : rgb(255,140,0,0.6);
     align-self : center;
 }
 
