--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@ body {
   color: white;
 }
 
+.text {
+  color : white;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
