--- a/src/Separator/Separator.css
+++ b/src/Separator/Separator.css
@@ -1,6 +1,10 @@
+p {
+    margin :0;
+}
+
 .separator {
-    width : 92%;
-    margin-left : 4%;
+    width : 96%;
+    margin-left : 0% !important;
     margin-top: 5rem;
     margin-bottom: 5rem;
     display: flex;
@@ -16,7 +20,5 @@
     align-self : center;
 }
 
-p {
-    margin :0;
-}
+
 
